Add check_answer func, timer going to negative error identified.

--- a/assets/style.css
+++ b/assets/style.css
@@ -37,6 +37,11 @@ ul {
   padding: 0;
 }
 
+li {
+  margin-bottom: 10px;
+  cursor: pointer;
+}
+
 #timer {
   text-align: center;
   font-weight: bold;
